# kokoroi-rs

./: .gitignore  Cargo.toml  README.md  README_EN.md  config.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/koko-cli/: Cargo.toml
crates/koko-cli/src/: main.rs  streaming_reader.rs
crates/kokoros-core/: Cargo.toml  build.rs
crates/kokoros-core/src/: lib.rs
crates/kokoros-core/src/onn/: mod.rs  onnx_inference.rs  ort_base.rs  ort_koko.rs  oxionnx_inference.rs
crates/kokoros-core/src/pipeline/: generator.rs  mod.rs  preprocessor.rs  queue.rs  text_splitter.rs  tts_backend.rs  types.rs
crates/kokoros-core/src/tts/: koko.rs  mod.rs  phonemizer.rs  tokenize.rs  vocab.rs
crates/kokoros-core/src/tts/chinese/: mod.rs  polyphonic.rs  tone_sandhi.rs  transcription.rs
crates/kokoros-core/src/utils/: mod.rs
crates/kokoros-core/src/wasm/: api.rs  audio.rs  mod.rs
crates/kokoros-openai/: Cargo.toml
crates/kokoros-server/: Cargo.toml
crates/kokoros-server/src/: audio.rs  chunker.rs  config.rs  main.rs
crates/kokoros-server/static/: index.html
crates/misaki/: Cargo.toml
crates/misaki/src/: data.rs  fallback.rs  g2p.rs  language.rs  lexicon.rs  lib.rs  tagger.rs
crates/misaki/src/languages/: english.rs  mod.rs
crates/misaki/src/resources/tagger/: classes.txt
docs/: arch.md  wasm.md
scripts/: aarch64-musl-linker.sh  build_aarch64_musl.sh  build_musl.sh  build_native.sh  build_ort_musl.sh  build_static.sh  build_wasm.sh  build_windows.ps1  download_all.sh  download_models.sh  download_voices.sh  export_q8.py  extract_g2pm_weights.py  musl_stubs.c  package.sh  test_q8_model.py  x86_64-musl-linker.sh
static/: browser_demo.html  index.html  kokoros.d.ts  rust_wasm_demo.html  server.py  wasm_demo.html
