[workspace]
resolver = "3"
members = [
    "crates/kokoros-core",
    "crates/koko-cli",
    "crates/kokoros-server",
    "crates/misaki",
]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
