[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
hound = "3.5.1"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.140"
ndarray-npy = "0.9.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"

pinyin = "0.11"
chinese-number = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jieba-rs = { version = "0.8", default-features = false, features = ["default-dict"] }

tract-onnx = { version = "0.22", optional = true }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false }
oxionnx = { version = "0.1", optional = true }
oxionnx-core = { version = "0.1", optional = true }

indicatif = { version = "0.17.11", optional = true }
reqwest = { version = "0.12.19", optional = true, default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.45.1", features = ["fs", "io-util"], optional = true }
mp3lame-encoder = { version = "0.2.1", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
opus = { version = "0.3", optional = true }
ogg = { version = "0.9", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
] }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
] }
serde-wasm-bindgen = { version = "0.6" }

[features]
default = ["chinese", "ort"]
chinese = []
onnx = ["tract-onnx"]
ort = ["dep:ort"]
cuda = []
oxionnx-backend = ["oxionnx", "oxionnx-core", "oxionnx/ndarray"]
download = ["reqwest", "tokio", "indicatif"]
audio-encode = ["mp3lame-encoder", "opus", "ogg"]
native = ["chinese", "ort", "download", "audio-encode", "uuid"]
wasm = ["chinese"]


